// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PullSecretSection /> PullSecretSection Disabled should render 1`] = `
<Fragment>
  <p>
    Download or copy your pull secret. The install program will prompt you for your pull secret during installation.
  </p>
  <div>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="secondary"
    >
      Download pull secret
    </Button>
    <Tooltip
      appendTo={[Function]}
      aria="describedby"
      boundary="window"
      className=""
      content="Copied!"
      distance={15}
      enableFlip={true}
      entryDelay={500}
      exitDelay={500}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      id=""
      isAppLauncher={false}
      isContentLeftAligned={false}
      isVisible={false}
      maxWidth="18.75rem"
      position="right"
      tippyProps={Object {}}
      trigger="manual"
      zIndex={9999}
    >
      <CopyToClipboard
        onCopy={[Function]}
        text=""
      >
        <Button
          className="install--copy-pull-secret"
          id="copyPullSecret"
          isDisabled={true}
          tabIndex={0}
          type="button"
          variant="link"
        >
          <PasteIcon
            color="#0066cc"
            noVerticalAlign={false}
            size="sm"
          />
            Copy pull secret
        </Button>
      </CopyToClipboard>
    </Tooltip>
  </div>
</Fragment>
`;

exports[`<PullSecretSection /> PullSecretSection should render 1`] = `
<Fragment>
  <p>
    Download or copy your pull secret. The install program will prompt you for your pull secret during installation.
  </p>
  <div>
    <Download
      content="{\\"error\\":\\"\\"}
"
      file="pull-secret"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
        variant="secondary"
      >
        Download pull secret
      </Button>
    </Download>
    <Tooltip
      appendTo={[Function]}
      aria="describedby"
      boundary="window"
      className=""
      content="Copied!"
      distance={15}
      enableFlip={true}
      entryDelay={500}
      exitDelay={500}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      id=""
      isAppLauncher={false}
      isContentLeftAligned={false}
      isVisible={false}
      maxWidth="18.75rem"
      position="right"
      tippyProps={Object {}}
      trigger="manual"
      zIndex={9999}
    >
      <CopyToClipboard
        onCopy={[Function]}
        text="{\\"error\\":\\"\\"}
"
      >
        <Button
          className="install--copy-pull-secret"
          id="copyPullSecret"
          isDisabled={false}
          tabIndex={0}
          type="button"
          variant="link"
        >
          <PasteIcon
            color="#0066cc"
            noVerticalAlign={false}
            size="sm"
          />
            Copy pull secret
        </Button>
      </CopyToClipboard>
    </Tooltip>
  </div>
</Fragment>
`;
